--- a/legislatura-1989-1992/1992/leis-complementares/LC00026/LC00026-1992R.md
+++ b/legislatura-1989-1992/1992/leis-complementares/LC00026/LC00026-1992R.md
@@ -16,7 +16,7 @@
 
 ~~**Art. 3º** É a seguinte a Estrutura Administrativa do ISSM:~~
 
-~~I – Conselho Superior de Administração;~~~
+~~I – Conselho Superior de Administração;~~
 
 ~~II – Presidência;~~
 
@@ -78,384 +78,267 @@
 
 ~~**Art.10.** São contribuintes facultativos do ISSM:~~
 
-I – O Prefeito do Município;
+~~I – O Prefeito do Município;~~
 
-II – Os vereadores do Município;
+~~II – Os vereadores do Município;~~
 
-III – Outras pessoas que, não sendo funcionários do Município, exerçam cargos em órgãos autárquico ou em Empresas Públicas Municipais, ou Empresas de Economia Mista do Município;
+~~III – Outras pessoas que, não sendo funcionários do Município, exerçam cargos em órgãos autárquico ou em Empresas Públicas Municipais, ou Empresas de Economia Mista do Município;~~
 
-**Parágrafo Único.** A inscrição facultativa obriga o candidato a exame de saúde por Junta Médica do quadro do ISSM ou credenciada especialmente para tal fim.
+~~**Parágrafo Único.** A inscrição facultativa obriga o candidato a exame de saúde por Junta Médica do quadro do ISSM ou credenciada especialmente para tal fim.~~
 
-**Art. 11.** O contribuinte facultativo, depois de 24 (vinte e quatro) contribuições consecutivas, poderá continuar como segurado, mesmo verificada a desvinculação do serviço Público Municipal, da Administração Direta ou Indireta do Município, mediante comunicação do seu propósito ao ISSM, apresentada até 30 (trinta) dias após a desvinculação, desde que cumpra o parágrafo único do artigo 10 desta Lei Complementar.
+~~**Art. 11.** O contribuinte facultativo, depois de 24 (vinte e quatro) contribuições consecutivas, poderá continuar como segurado, mesmo verificada a desvinculação do serviço Público Municipal, da Administração Direta ou Indireta do Município, mediante comunicação do seu propósito ao ISSM, apresentada até 30 (trinta) dias após a desvinculação, desde que cumpra o parágrafo único do artigo 10 desta Lei Complementar.~~
 
-**Parágrafo Único.** Depois da comunicação ao ISSM, o segurado deverá iniciar o pagamento das contribuições em dobro, até o 10º (décimo) dia do mês imediato ao da comunicação, obrigando-se a integralizar, também em dobro, quaisquer contribuições relativas ao período de interrupções com
-os acréscimos legais.
+~~**Parágrafo Único.** Depois da comunicação ao ISSM, o segurado deverá iniciar o pagamento das contribuições em dobro, até o 10º (décimo) dia do mês imediato ao da comunicação, obrigando-se a integralizar, também em dobro, quaisquer contribuições relativas ao período de interrupções com os acréscimos legais.~~
 
-**Art.12.** O Serviço do Pessoal, da Prefeitura Municipal, da Câmara Municipal, e demais entidades patronais empregadoras, deverão comunicar ao ISSM, no prazo de 15 (quinze) dias, as demissões,
-dispensas, ou qualquer outras alterações ocorridas no mês anterior e relativas ao pessoal contribuinte e beneficiários;
+~~**Art.12.** O Serviço do Pessoal, da Prefeitura Municipal, da Câmara Municipal, e demais entidades patronais empregadoras, deverão comunicar ao ISSM, no prazo de 15 (quinze) dias, as demissões, dispensas, ou qualquer outras alterações ocorridas no mês anterior e relativas ao pessoal contribuinte e beneficiários;~~
 
-**Art. 13.** Ao segurado obrigatório, que deixar de exercer atividades sob regime do ISSM, é facultativo manter a qualidade de segurado, desde que passe a efetuar, em dobro, em seguida à ocorrência, no prazo máximo de 30 (trinta) dias, o pagamento mensal das contribuições;
+~~**Art. 13.** Ao segurado obrigatório, que deixar de exercer atividades sob regime do ISSM, é facultativo manter a qualidade de segurado, desde que passe a efetuar, em dobro, em seguida à ocorrência, no prazo máximo de 30 (trinta) dias, o pagamento mensal das contribuições;~~
 
-**Art. 14.** contribuição obrigatória é de 06% (seis por cento) sobre os vencimentos e vantagens do contribuinte, excluídas dessa incidência os pagamentos por diária, salário família, adicional de férias, ajudas de custo, representação e indenizações, cabendo a Prefeitura e
-Câmara Municipal, e demais responsáveis pelos descontos e recolhimentos nos valores equivalentes aos 12% (doze por cento);
+~~**Art. 14.** contribuição obrigatória é de 06% (seis por cento) sobre os vencimentos e vantagens do contribuinte, excluídas dessa incidência os pagamentos por diária, salário família, adicional de férias, ajudas de custo, representação e indenizações, cabendo a Prefeitura e Câmara Municipal, e demais responsáveis pelos descontos e recolhimentos nos valores equivalentes aos 12% (doze por cento);~~
 
-**Parágrafo Único.** A contribuição Patronal da Prefeitura e Câmara Municipal, ou de outras entidades contribuintes patronais, serão divididas na forma do artigo 30 e 31 desta Lei Complementar;
+~~**Parágrafo Único.** A contribuição Patronal da Prefeitura e Câmara Municipal, ou de outras entidades contribuintes patronais, serão divididas na forma do artigo 30 e 31 desta Lei Complementar;~~
 
-**Art. 15.** Para determinar a remuneração sujeita a desconto levar-se á em conta as deduções ou a parte não paga por falta de freqüência integral.
+~~**Art. 15.** Para determinar a remuneração sujeita a desconto levar-se á em conta as deduções ou a parte não paga por falta de freqüência integral.~~
 
-**§ 1º** A parte do vencimento, de natureza variável, como percentagem ou cotas, será arbitrada para cada ano, de acordo com a média mensal apurada em meses do ano anterior;
+~~**§ 1º** A parte do vencimento, de natureza variável, como percentagem ou cotas, será arbitrada para cada ano, de acordo com a média mensal apurada em meses do ano anterior;~~
 
-**§ 2º** Em caso de acumulação permitida em Lei, a apuração, para os efeitos deste Regulamento, será a soma dos valores percebidos, neles incluídas verbas de qualquer natureza, salvo excepcionais deste artigo;
+~~**§ 2º** Em caso de acumulação permitida em Lei, a apuração, para os efeitos deste Regulamento, será a soma dos valores percebidos, neles incluídas verbas de qualquer natureza, salvo excepcionais deste artigo;~~
 
-**Art.16.** A contribuição do Prefeito, dos vereadores e demais relacionados no artigo 10, será feita na base de 06% (seis por cento), igual ao segurado obrigatório, mais de 12% (doze por cento) da entidade responsável pelo recolhimento;
+~~**Art.16.** A contribuição do Prefeito, dos vereadores e demais relacionados no artigo 10, será feita na base de 06% (seis por cento), igual ao segurado obrigatório, mais de 12% (doze por cento) da entidade responsável pelo recolhimento;~~
 
-**Art. 17.** Ao segurado facultativo, não participante da classificação do artigo anterior, compete pagar a própria contribuição e a que
-corresponder à entidade para qual esteja prestando serviço, na base da
-importância dela recebida, a título remuneratório;
+~~**Art. 17.** Ao segurado facultativo, não participante da classificação do artigo anterior, compete pagar a própria contribuição e a que corresponder à entidade para qual esteja prestando serviço, na base da importância dela recebida, a título remuneratório;~~
 
-### CAPÍTULO II - DO RECOLHIMENTO DAS CONTRIBUIÇÕES E DAS DESIGNAÇÕES
+### ~~CAPÍTULO II - DO RECOLHIMENTO DAS CONTRIBUIÇÕES E DAS DESIGNAÇÕES~~
 
-**Art. 18.** A arrecadação das contribuições devidas ao ISSM, compreendendo o respectivo desconto e seu recolhimento, deverá ser realizada, observando-se as seguintes normas:
+~~**Art. 18.** A arrecadação das contribuições devidas ao ISSM, compreendendo o respectivo desconto e seu recolhimento, deverá ser realizada, observando-se as seguintes normas:~~
 
-I – Aos setores encarregados de efetuar o pagamento dos funcionários, quer da Prefeitura ou da Câmara Municipal, quer da Autarquia Municipal ou Empresa Pública caberá descontar, no ato do
-pagamento, as importâncias de que tratam os artigos 14 a 17;
+~~I – Aos setores encarregados de efetuar o pagamento dos funcionários, quer da Prefeitura ou da Câmara Municipal, quer da Autarquia Municipal ou Empresa Pública caberá descontar, no ato do pagamento, as importâncias de que tratam os artigos 14 a 17;~~
 
-II – A importância arrecadada, prevista no item anterior, juntamente com a correspondente devida pelo Município, Autarquia ou Empresa Pública, pelo conjunto de seus funcionários, segurados do ISSM, será recolhida a Banco, em favor do Instituto dentro de 05 (cinco) dias, após o
-último dia de pagamento dos funcionários;
+~~II – A importância arrecadada, prevista no item anterior, juntamente com a correspondente devida pelo Município, Autarquia ou Empresa Pública, pelo conjunto de seus funcionários, segurados do ISSM, será recolhida a Banco, em favor do Instituto dentro de 05 (cinco) dias, após o último dia de pagamento dos funcionários;~~
 
-**§ 1º** O não recolhimento das contribuições referentes ao disposto no inciso II deste artigo, dentro do prazo fixado implicará em crime de responsabilidade como previsto no Artigo 1º do Decreto-Lei nº. 201/67.
+~~**§ 1º** O não recolhimento das contribuições referentes ao disposto no inciso II deste artigo, dentro do prazo fixado implicará em crime de responsabilidade como previsto no Artigo 1º do Decreto-Lei nº. 201/67.~~
 
-**§ 2º** Na mesma data do recolhimento referente no inciso II deste artigo, será enviada ao **ISSM** , relação discriminativa dos descontos efetuados;
+~~**§ 2º** Na mesma data do recolhimento referente no inciso II deste artigo, será enviada ao ISSM, relação discriminativa dos descontos efetuados;~~
 
-**Art. 19** º - O Segurado facultativo, quando for o caso fica obrigado a
-recolher, cada mês diferentemente ao **ISSM** , as contribuições devidas no
-prazo mencionado no inciso II do **artigo anterior** ;
+~~**Art. 19.** O Segurado facultativo, quando for o caso fica obrigado a recolher, cada mês diferentemente ao ISSM, as contribuições devidas no prazo mencionado no inciso II do artigo anterior;~~
 
-**Art. 20º -** As importâncias correspondentes às consignações
-averbadas para amortização de empréstimo de qualquer espécie contraídas
-com o **ISSM** por segurados, serão também descontadas e recolhidas, na
-forma estabelecida no **artigo 18** , devendo a relação discriminativa ser
-entregue ao **ISSM** ;
+~~**Art. 20.** As importâncias correspondentes às consignações averbadas para amortização de empréstimo de qualquer espécie contraídas com o ISSM por segurados, serão também descontadas e recolhidas, na forma estabelecida no artigo 18, devendo a relação discriminativa ser entregue ao ISSM;~~
 
+~~**Art.21.** A falta de recolhimento, na época própria de contribuições de outras quantias devidas ao ISSM, implicará em sanções previstas nesta Lei e no Regimento interno;~~
 
-**Art.21º -** A falta de recolhimento, na época própria de
-contribuições de outras quantias devidas ao **ISSM** , implicará em sanções
-previstas nesta Lei e no Regimento interno;
+### ~~CAPÍTULO III - DOS DEPENDENTES~~
 
-### CAPÍTULO III - DOS DEPENDENTES
+~~**Art. 22.** São dependentes do segurado:~~
 
-**Art. 22º -** São dependentes do segurado:
-I – A esposa, a companheira manteúda há mais de cinco anos na sua
-dependência econômica, total ou parcialmente e, sem essas condições,
-desde que exista filhos havido em comum;
-II – Os filhos, inclusive os adotivos e enteados, os menores carentes
-de alimentação e educação, que se encontrem sob a guarda, por ato
-judicial ou termo de tutela, todos até 18 (dezoito) anos de idade ou até 21
-(vinte e um) anos, se estudantes e sem renda própria;
+~~I – A esposa, a companheira manteúda há mais de cinco anos na sua dependência econômica, total ou parcialmente e, sem essas condições, desde que exista filhos havido em comum;~~
 
-**Art. 23º -** A existência de dependentes de qualquer das classes
-enumeradas nos incisos do **Artigo anterior** exclui do direito às
-prestações, os dependentes subseqüentes;
+~~II – Os filhos, inclusive os adotivos e enteados, os menores carentes de alimentação e educação, que se encontrem sob a guarda, por ato judicial ou termo de tutela, todos até 18 (dezoito) anos de idade ou até 21 (vinte e um) anos, se estudantes e sem renda própria;~~
 
-**Art. 24º -** A perda da qualidade de dependente ocorrerá
-imediatamente, nos seguintes casos:
-I – Pela extinção da qualidade de segurado do qual dependa;
-II – Para o conjugue, pelo divorcio ou separação judicial desde que
-sem a obrigação alimentar atribuída ao segurado, ou pela anulação do
-casamento;
-III – Para a esposa, pelo abandono do lar, reconhecido em sentença
-judicial, transitada em julgamento;
-IV – Para a companheira, ao ser cancelada sua transição, a pedido
-do segurado, ou desfeito, em vida concubinato;
-V – Pelo falecimento, implemento de idade ou cessação das
-ocorrências previstas nos itens I e II do **artigo 22.**
-VI – Quando o segurado não obrigatório deixar de recolher a cota
-contribuinte, durante três meses consecutivos;
+~~**Art. 23.** A existência de dependentes de qualquer das classes enumeradas nos incisos do Artigo anterior exclui do direito às prestações, os dependentes subseqüentes;~~
 
-**Art. 25º -** A inscrição do segurado obrigatoriamente, far-se-á ex-
-officio, devendo ser requerida a dos dependentes comprovados.
+~~**Art. 24.** A perda da qualidade de dependente ocorrerá imediatamente, nos seguintes casos:~~
 
-**§ 1º -** Depende de petição a inscrição dos contribuintes facultativos
-e seus dependentes comprovados;
-**§ 2º -** Os filhos e filhas e seus equiparados, observadas as condições
-constantes dos **incisos I e II** do **Artigo 22** , fazem jus aos benefícios para
-eles previstos, independentemente da existência de inscrição, desde que
-comprovada a sua qualidade;
+~~I – Pela extinção da qualidade de segurado do qual dependa;~~
 
+~~II – Para o conjugue, pelo divorcio ou separação judicial desde que sem a obrigação alimentar atribuída ao segurado, ou pela anulação do casamento;~~
 
-### CAPÍTULO IV
+~~III – Para a esposa, pelo abandono do lar, reconhecido em sentença judicial, transitada em julgamento;~~
 
-### DA CARÊNCIA
+~~IV – Para a companheira, ao ser cancelada sua transição, a pedido do segurado, ou desfeito, em vida concubinato;~~
 
-**Art. 26º -** Estão sujeitas as carências;
-I – de 18 (dezoito) meses de contribuição, a pensão por morte;
-II – de 60 (sessenta) meses de contribuição, a aposentadoria por
-velhice, por tempo de serviço e a especial, salvo a aposentadoria por
-acidente de trabalho;
+~~V – Pelo falecimento, implemento de idade ou cessação das ocorrências previstas nos itens I e II do artigo 22.~~
 
-**Art. 27º -** Independente da carência:
-I – O auxílio-funeral e o financeiro;
-II – O pecúlio;
-III – A assistência médico-hospitalar, farmacêutica, odontológica e
-de enfermagem.
+~~VI – Quando o segurado não obrigatório deixar de recolher a cota contribuinte, durante três meses consecutivos;~~
 
-**Art. 28º -** Perdida a qualidade de segurado, a data de renovação
-inicia novo período de carência;
+~~**Art. 25.** A inscrição do segurado obrigatoriamente, far-se-á ex-officio, devendo ser requerida a dos dependentes comprovados.~~
 
-### CAPÍTULO V
+~~**§ 1º** Depende de petição a inscrição dos contribuintes facultativos e seus dependentes comprovados;~~
 
-### DOS CUSTEIOS DE PRESTAÇÕES
+~~**§ 2º** Os filhos e filhas e seus equiparados, observadas as condições constantes dos incisos I e II do Artigo 22, fazem jus aos benefícios para eles previstos, independentemente da existência de inscrição, desde que comprovada a sua qualidade;~~
 
-```
-Art. 29º - Constituem receita de ISSM:
-I- A taxa de contribuição da Prefeitura e da Câmara
-Municipal, e demais entidades patronais responsáveis pelos
-recolhimentos conforme o artigo 14 e 16 desta Lei;
-II- Suplementos e subvenções do município;
-III- A cota de previdência;
-IV- Juros rendimentos de seu patrimônio, doações, legados e
-rendas eventuais;
-V- Prêmios de seguro.
-```
-```
-CAPÍTULO VI
-```
-```
-DOS FUNDOS
-DO FUNDO DE APOSENTADORIA
-```
-**Art.30º -** Constitui o Fundo de Aposentadoria, os recursos
-provenientes da contribuição da Prefeitura Municipal de Maricá, da
-Câmara Municipal de Maricá e de seus órgãos vinculados ao **ISSM** , no
-valor de 06% (seis por cento) que serão convertidos obrigatoriamente em
-depósitos sujeitos a correção monetária e juros, e só poderão ser aplicados
-em pagamentos referentes a aposentadoria dos Funcionários Públicos
-Municipais, na forma da Lei do Regulamento.
+### ~~CAPÍTULO IV - DA CARÊNCIA~~
 
+~~**Art. 26.** Estão sujeitas as carências:~~
 
-**§ 1º -** O custeio das aposentadorias dos Funcionários Públicos
-Municipais será de responsabilidade do Tesouro Municipal só cabendo ao
-**ISSM** a administração do Fundo de Aposentadoria e a normatização dos
-seus benefícios na forma da Lei e do Regulamento;
+~~I – de 18 (dezoito) meses de contribuição, a pensão por morte;~~
 
-**§ 2º -** Os depósitos do Fundo de Aposentadoria que é constituído
-pela metade do total das contribuições recolhidas pelas entidades
-patronais serão obrigatoriamente colocados em instituições oficiais;
+~~II – de 60 (sessenta) meses de contribuição, a aposentadoria por velhice, por tempo de serviço e a especial, salvo a aposentadoria por acidente de trabalho;~~
 
-### DO FUNDO DE LIQUIDEZ
+~~**Art. 27.** Independente da carência:~~
 
-**Art. 31º -** Constituem Fundo de Liquidez, convertidos os títulos ou
-depósitos sujeitos à correção monetária e juros;
-I – As contribuições previdenciárias sociais dos segurados;
-II – dos 12% (doze por cento) constantes no **artigo 14** desta Lei
-Complementar, das contribuições das entidades patronais, 06% (seis por
-cento) serão destinados ao Fundo de Liquidez;
-III – Os juros de empréstimos.
+~~I – O auxílio-funeral e o financeiro;~~
 
-**§ Único –** O Fundo de Liquidez somente pode ser aplicado em
-reajustamento geral de benefícios.
+~~II – O pecúlio;~~
 
-```
-CAPÍTULO VII
-```
-```
-DA SUPLEMENTAÇÃO DA RECEITA
-```
-**Art. 32º -** O Prefeito Municipal de Maricá deverá incluir na Lei
-Orçamentária anual, um auxílio financeiro ao **ISSM** para suplementar a
-manutenção dos seus serviços, destinando um percentual no mínimo de
-05% (cinco por cento) da receita tributária própria do Município;
+~~III – A assistência médico-hospitalar, farmacêutica, odontológica e de enfermagem.~~
 
-**§ Único –** Em caso de dificuldades financeiras o **ISSM** será
-socorrido pela Prefeitura Municipal de Maricá, através de Crédito
-Suplementares, especialmente abertos para esse fim, além dos créditos
-estabelecidos no orçamento do Município, sem prejuízo das previsões
-estabelecidas no orçamento de seguridade social;
+~~**Art. 28.** Perdida a qualidade de segurado, a data de renovação inicia novo período de carência;~~
 
-```
-CAPÍTULO VIII
-```
-### DO PLANO DE CUSTEIO
+### ~~CAPÍTULO V - DOS CUSTEIOS DE PRESTAÇÕES~~
 
-**Art. 33º -** Será aprovado, anualmente, por Decreto do Prefeito, o
-Plano de Custeio do Regime do **ISSM,** contando o Processo Financeiro, o
-valor total de reservas, previstas no fim de cada exercício, e a sobre carga
-administrativa;
+~~**Art. 29.** Constituem receita de ISSM:~~
 
+~~I- A taxa de contribuição da Prefeitura e da Câmara Municipal, e demais entidades patronais responsáveis pelos recolhimentos conforme o artigo 14 e 16 desta Lei;~~
 
-O **parágrafo único** do **artigo 33** , passa a ser a **parágrafo 1º** do
-**artigo** citado, incluindo-se neste **artigo o § 2º** ;
-**§ 1º -** O plano de custeio, obtido por normas e previsões de despesa
-e receita, através de avaliação atuárias, destina-se à planificação
-econômica do Regime a ser conseqüente equilíbrio-científico.
-**§ 2º -** As remunerações do Presidente e dos Diretores do Instituto de
-Seguridade Social de Maricá ( **ISSM** ), correrão à conta da sobre carga
-administrativa do Plano de Custeio.
+~~II- Suplementos e subvenções do município;~~
 
-### CAPÍTULO IX
+~~III- A cota de previdência;~~
 
-### DOS BENEFÍCIOS
+~~IV- Juros rendimentos de seu patrimônio, doações, legados e rendas eventuais;~~
 
-**Art. 34º -** O plano de Seguridade Social visa dar cobertura aos
-riscos a que está sujeito o funcionário e a sua família, e compreende um
-conjunto de benefícios e ações que atendam as seguintes finalidades:
-I – Garantir meios de subsistências nos eventos de doença
-invalidez, velhice, acidente em serviço, inatividade, falecimento e
-reclusão;
-II – Proteção a maternidade, à adoção e a paternidade; e
-III – Assistência a saúde.
+~~V- Prêmios de seguro.~~
 
-**§ Único –** Os benefícios serão concedidos, nos termos e condições
-definidos e a Lei Complementar que criou o Regime Jurídico Único
-(Estatuto dos Funcionários) e nas condições definidas nesta Lei e nos
-regulamentos.
+### ~~CAPÍTULO VI - DOS FUNDOS DO FUNDO DE APOSENTADORIA~~
 
-**Art. 35º -** Os benefícios do Plano de Seguridade Social dos
-Funcionários, que serão administrados nos termos desta Lei, compreende:
+~~**Art. 30.** Constitui o Fundo de Aposentadoria, os recursos provenientes da contribuição da Prefeitura Municipal de Maricá, da Câmara Municipal de Maricá e de seus órgãos vinculados ao ISSM, no valor de 06% (seis por cento) que serão convertidos obrigatoriamente em depósitos sujeitos a correção monetária e juros, e só poderão ser aplicados em pagamentos referentes a aposentadoria dos Funcionários Públicos Municipais, na forma da Lei do Regulamento.~~
+
+~~**§ 1º** O custeio das aposentadorias dos Funcionários Públicos Municipais será de responsabilidade do Tesouro Municipal só cabendo ao ISSM a administração do Fundo de Aposentadoria e a normatização dos seus benefícios na forma da Lei e do Regulamento;~~
+
+~~**§ 2º** Os depósitos do Fundo de Aposentadoria que é constituído pela metade do total das contribuições recolhidas pelas entidades patronais serão obrigatoriamente colocados em instituições oficiais;~~
+
+### ~~DO FUNDO DE LIQUIDEZ~~
+
+~~**Art. 31.** Constituem Fundo de Liquidez, convertidos os títulos ou depósitos sujeitos à correção monetária e juros:~~
+
+~~I – As contribuições previdenciárias sociais dos segurados;~~
+
+~~II – dos 12% (doze por cento) constantes no artigo 14 desta Lei Complementar, das contribuições das entidades patronais, 06% (seis por cento) serão destinados ao Fundo de Liquidez;~~
+
+~~III – Os juros de empréstimos.~~
+
+~~**Parágrafo Único.** O Fundo de Liquidez somente pode ser aplicado em reajustamento geral de benefícios.~~
+
+### ~~CAPÍTULO VII - DA SUPLEMENTAÇÃO DA RECEITA~~
+
+~~**Art. 32.** O Prefeito Municipal de Maricá deverá incluir na Lei Orçamentária anual, um auxílio financeiro ao ISSM para suplementar a manutenção dos seus serviços, destinando um percentual no mínimo de 05% (cinco por cento) da receita tributária própria do Município;~~
+
+~~**Parágrafo Único.** Em caso de dificuldades financeiras o ISSM será socorrido pela Prefeitura Municipal de Maricá, através de Crédito Suplementares, especialmente abertos para esse fim, além dos créditos estabelecidos no orçamento do Município, sem prejuízo das previsões estabelecidas no orçamento de seguridade social;~~
+
+### ~~CAPÍTULO VIII - DO PLANO DE CUSTEIO~~
+
+~~**Art. 33º -** Será aprovado, anualmente, por Decreto do Prefeito, o Plano de Custeio do Regime do ISSM, contando o Processo Financeiro, o valor total de reservas, previstas no fim de cada exercício, e a sobre carga administrativa;~~
+
+~~O **parágrafo único** do artigo 33, passa a ser a parágrafo 1º do artigo citado, incluindo-se neste artigo o § 2º:~~
+
+~~**§ 1º -** O plano de custeio, obtido por normas e previsões de despesa e receita, através de avaliação atuárias, destina-se à planificação econômica do Regime a ser conseqüente equilíbrio-científico.~~
+
+~~**§ 2º -** As remunerações do Presidente e dos Diretores do Instituto de Seguridade Social de Maricá ( **ISSM** ), correrão à conta da sobre carga administrativa do Plano de Custeio.~~
+
+### ~~CAPÍTULO IX - DOS BENEFÍCIOS~~
+
+~~**Art. 34º -** O plano de Seguridade Social visa dar cobertura aos riscos a que está sujeito o funcionário e a sua família, e compreende um conjunto de benefícios e ações que atendam as seguintes finalidades:~~
+
+~~I – Garantir meios de subsistências nos eventos de doença invalidez, velhice, acidente em serviço, inatividade, falecimento e reclusão;~~
+
+~~II – Proteção a maternidade, à adoção e a paternidade; e~~
+
+~~III – Assistência a saúde.~~
+
+~~**§ Único –** Os benefícios serão concedidos, nos termos e condições definidos e a Lei Complementar que criou o Regime Jurídico Único (Estatuto dos Funcionários) e nas condições definidas nesta Lei e nos regulamentos.~~
+
+**Art. 35º -** Os benefícios do Plano de Seguridade Social dos Funcionários, que serão administrados nos termos desta Lei, compreende:
+
 I – Quanto ao Funcionário:
+
 a) – Aposentadoria
+
 b) – Auxílio Natalidade
+
 c) – Salário Família
+
 d) – Licença a Gestantes, a Adotante e a Paternidade
+
 e) – e Licença por acidente de serviço.
 
-```
 II – Quanto ao dependente;
+
 a) – Pensão vitalícia e temporária
+
 b) – Pecúlio
+
 c) – Auxílio Funeral e
+
 d) – Auxílio Reclusão.
-```
-**§ Único –** O recebimento indevido de benefícios havidos por fraude, dolo
-ou má fé, implicará em devolução do erário do total auferido, sem
-prejuízo de ação penal cabível.
 
+**§ Único –** O recebimento indevido de benefícios havidos por fraude, dolo ou má fé, implicará em devolução do erário do total auferido, sem prejuízo de ação penal cabível.
 
-### CAPÍTULO X
+### CAPÍTULO X - DOS FUNCIONÁRIOS DO ISSM
 
-### DOS FUNCIONÁRIOS DO ISSM
+**Art. 36º -** Os funcionários do **ISSM** , regidos pelo Estatuto dos Funcionários, fazem jus à aposentadoria, por velhice, tempo de serviço especial, e à pensão, por morte, pagos pelo **ISSM**.
 
-**Art. 36º -** Os funcionários do **ISSM** , regidos pelo Estatuto dos
-Funcionários, fazem jus à aposentadoria, por velhice, tempo de serviço
-especial, e à pensão, por morte, pagos pelo **ISSM**.
+**§ Único –** Os funcionários do **ISSM** fazem jus aos benefícios que serão cobertos pelo órgão nos moldes dos demais funcionários Municipais.
 
-**§ Único –** Os funcionários do **ISSM** fazem jus aos benefícios que serão
-cobertos pelo órgão nos moldes dos demais funcionários Municipais.
+**Art. 37º -** Somente serão nomeados funcionários para o **ISSM** se não for possível requisitá-los entre os funcionários Municipais, e as nomeações serão contidas nos limites da sobrecarga administrativa e só poderão ser admitidos por concurso público aprovado as vagas pelo Prefeito.
 
-**Art. 37º -** Somente serão nomeados funcionários para o **ISSM** se não for
-possível requisitá-los entre os funcionários Municipais, e as nomeações
-serão contidas nos limites da sobrecarga administrativa e só poderão ser
-admitidos por concurso público aprovado as vagas pelo Prefeito.
+### CAPÍTULO XI - DA PRESCRIÇÃO
 
-```
-CAPÍTULO XI
-```
-### DA PRESCRIÇÃO
+**Art. 38º -** Aplicam-se ao **ISSM** os prazos de prescrição de que goza o Município de Maricá, ressalvando-se que:
 
-**Art. 38º -** Aplicam-se ao **ISSM** os prazos de prescrição de que goza o
-Município de Maricá, ressalvando-se que:
-I – Prescreverá, em cinco anos, o direito às prestações devidas aos
-beneficiários;
-II – Prescreverá, no prazo de vinte anos, o direito do **ISSM** receber
-ou cobrar as importâncias a ele devidas.
+I – Prescreverá, em cinco anos, o direito às prestações devidas aos beneficiários;
 
-### CAPÍTULO XII
+II – Prescreverá, no prazo de vinte anos, o direito do **ISSM** receber ou cobrar as importâncias a ele devidas.
 
-### DA DIRETORIA
+### CAPÍTULO XII - DA DIRETORIA
 
-**Art. 39º -** O Presidente do **ISSM** reunirá a Diretoria uma vez, por semana,
-para apreciar, decidir e resolver sobre:
+**Art. 39º -** O Presidente do **ISSM** reunirá a Diretoria uma vez, por semana, para apreciar, decidir e resolver sobre:
 
-```
-a) – questões de interesse do ISSM, inclusive aprovar Portarias
-necessárias ao seu funcionamento e quadro de pessoal, devendo
-este ser encaminhado a aprovação do Conselho Superior de
-Administração;
+a) – questões de interesse do ISSM, inclusive aprovar Portarias necessárias ao seu funcionamento e quadro de pessoal, devendo
+este ser encaminhado a aprovação do Conselho Superior de Administração;
+
 b) – discutir e decidir os assuntos encaminhados pelo Presidente;
-```
-**§ Único –** As reuniões da Diretoria poderão ter a assistência de um
-Atuário e a colaboração do Secretário da Presidência.
 
+**§ Único –** As reuniões da Diretoria poderão ter a assistência de um Atuário e a colaboração do Secretário da Presidência.
 
-### CAPÍTULO XIII
+### CAPÍTULO XIII - DO CONSELHO SUPERIOR DE ADMINISTRAÇÃO
 
-### DO CONSELHO SUPERIOR DE ADMINISTRAÇÃO
-
-**Art. 40º -** O Conselho Superior de Administração do **ISSM,** composto de
-10 (dez) membros, constituir-se-á pelo Secretário Municipal de Fazenda,
-pelo Secretário Municipal de Administração, pelo Presidente do **ISSM** ,
-que presidirá o Conselho de que trata este **artigo** , pelo Diretor de
-Administração e Finanças, pelo Diretor de Benefícios, pelo Diretor de
-Assistência, por um membro eleito pela Câmara Municipal de Maricá, por
-um representante eleito pelos sócios da **ASSERMA** , por um representante
-eleito da Associação dos Profissionais de Saúde do Município de Maricá e
-um representante do Sindicato dos Professores do Município de Maricá, e
-reunir-se-á, ordinariamente, duas vezes por mês, e extraordinariamente,
-sempre que necessário, fora de hora do expediente normal, para apreciar e
+**Art. 40º -** O Conselho Superior de Administração do **ISSM,** composto de 10 (dez) membros, constituir-se-á pelo Secretário Municipal de Fazenda, pelo Secretário Municipal de Administração, pelo Presidente do **ISSM** , que presidirá o Conselho de que trata este **artigo** , pelo Diretor de Administração e Finanças, pelo Diretor de Benefícios, pelo Diretor de Assistência, por um membro eleito pela Câmara Municipal de Maricá, por um representante eleito pelos sócios da **ASSERMA** , por um representante eleito da Associação dos Profissionais de Saúde do Município de Maricá e um representante do Sindicato dos Professores do Município de Maricá, e reunir-se-á, ordinariamente, duas vezes por mês, e extraordinariamente, sempre que necessário, fora de hora do expediente normal, para apreciar e
 decidir sobre:
-I – recursos de segurados, dependentes, ou quaisquer interessados,
-interpostos dentro de trinta dias, arrascados, ou mediante simples termos
-de processo, manifestando a vontade de recorrer contra despachos ou
-decisões;
-II – providências para aplicação eqüitativa de verbas, de maneira a
-garantir maiores quantitativos à previdência;
+
+I – recursos de segurados, dependentes, ou quaisquer interessados, interpostos dentro de trinta dias, arrascados, ou mediante simples termos de processo, manifestando a vontade de recorrer contra despachos ou decisões;
+
+II – providências para aplicação eqüitativa de verbas, de maneira a garantir maiores quantitativos à previdência;
+
 III – medidas tendentes a prevenir riscos;
+
 IV – assuntos encaminhados pela Diretoria do **ISSM;**
-V – modificações na estrutura orgânica e no quadro de pessoal do **ISSM,**
-devendo estas serem submetidas à consideração do Prefeito e da Câmara
-Municipal de Maricá.
 
-**§Único –** As reuniões do Conselho serão secretariadas por um
-Funcionário indicado pelo Presidente.
+V – modificações na estrutura orgânica e no quadro de pessoal do **ISSM,** devendo estas serem submetidas à consideração do Prefeito e da Câmara Municipal de Maricá.
 
-### CAPÍTULO XIV
+**§Único –** As reuniões do Conselho serão secretariadas por um Funcionário indicado pelo Presidente.
 
-### DA PRESTAÇÃO DE CONTAS
+### CAPÍTULO XIV - DA PRESTAÇÃO DE CONTAS
 
-**Art. 41º -** O Presidente do **ISSM** está sujeito a prestação de contas de
-gestão econômica-financeira-patrimonial, mediante elementos contábeis, à
-qual será submetida ao Prefeito do Município de Maricá e, a seguir
-encaminhada à Câmara Municipal até o dia 15 (quinze) de fevereiro de
-cada ano;
+**Art. 41º -** O Presidente do **ISSM** está sujeito a prestação de contas de gestão econômica-financeira-patrimonial, mediante elementos contábeis, à qual será submetida ao Prefeito do Município de Maricá e, a seguir encaminhada à Câmara Municipal até o dia 15 (quinze) de fevereiro de cada ano;
 
-```
 DISPOSIÇÕES GERAIS
-```
-**Art. 42º -** É vedado criar, majorar ou estender qualquer prestação sem a
-correspondente fonte de custeio total.
 
+**Art. 42º -** É vedado criar, majorar ou estender qualquer prestação sem a correspondente fonte de custeio total.
 
-**Art. 43º -** O regulamento e Instruções do **ISSM** , em caso de dúvida, serão
-interpretados pelo Conselho.
+**Art. 43º -** O regulamento e Instruções do **ISSM** , em caso de dúvida, serão interpretados pelo Conselho.
 
-**Art. 44º -** Na aplicação dos dispositivos regulamentares, atender-se-á aos
-fins sociais a que ele se destinam.
+**Art. 44º -** Na aplicação dos dispositivos regulamentares, atender-se-á aos fins sociais a que ele se destinam.
 
-**Art. 45º -** As pensões por morte são reajustáveis segundo o índice do
-aumento do vencimento e salários dos funcionários municipais da ativa.
+**Art. 45º -** As pensões por morte são reajustáveis segundo o índice do aumento do vencimento e salários dos funcionários municipais da ativa.
 
-**Art. 46º -** O regulamento do **ISSM** pode ser suplementado por Instruções
-e Portarias do seu Presidente, em tudo que compreende o funcionamento
-dos seus Funcionários Administrativo, observada a competência do
-Prefeito, na parte de organização estrutural.
+**Art. 46º -** O regulamento do **ISSM** pode ser suplementado por Instruções e Portarias do seu Presidente, em tudo que compreende o funcionamento dos seus Funcionários Administrativo, observada a competência do Prefeito, na parte de organização estrutural.
 
 **Art. 47º -** O **ISSM** promoverá, segundo instruções de sua Diretoria:
-I – Projetos de núcleos residenciais de trabalhadores e funcionários que
-recebam menos de 05 (cinco) salários mínimos.
-II – Construção de parques de recreação para os segurados e seus
-beneficiários;
-III – Convênio para formação profissional de filhos e dependentes de
-segurado.
-IV – Cursos de aprimoramento dos Funcionários do **ISSM;**
-V – Solenidades comemorativas de interesse da comunhão dos segurados;
-VI – Contratos e convênios com instituições Públicas ou Privadas,
-VII – Constituição de um reembolsável para os funcionários municipais,
-funcionando na forma como dispuzer o seu Estatuto e Regime Interno;
 
-**Art. 48º -** Esta Lei altera e consolida as Leis Complementares nº. 11, de
-22 de agosto de 1991; nº. 21 de 28 de maio de 1992 e nº. 23 de 22 de
-julho de 1992, e entra em vigor na data de sua publicação, revogando-se
-as disposições em contrário.
+I – Projetos de núcleos residenciais de trabalhadores e funcionários que recebam menos de 05 (cinco) salários mínimos.
+
+II – Construção de parques de recreação para os segurados e seus beneficiários;
+
+III – Convênio para formação profissional de filhos e dependentes de segurado.
+
+IV – Cursos de aprimoramento dos Funcionários do **ISSM;**
+
+V – Solenidades comemorativas de interesse da comunhão dos segurados; 
+
+VI – Contratos e convênios com instituições Públicas ou Privadas,
+
+VII – Constituição de um reembolsável para os funcionários municipais, funcionando na forma como dispuzer o seu Estatuto e Regime Interno;
+
+**Art. 48º -** Esta Lei altera e consolida as Leis Complementares nº. 11, de 22 de agosto de 1991; nº. 21 de 28 de maio de 1992 e nº. 23 de 22 de julho de 1992, e entra em vigor na data de sua publicação, revogando-seas disposições em contrário.
 
 PREFEITURA MUNICIPAL DE MARICÁ, EM 10 DE OUTUBRO DE 1992.
 
