--- a/1989-1992/1990/lei-organica/ELO-00001-1990.md
+++ b/1989-1992/1990/lei-organica/ELO-00001-1990.md
@@ -2,7 +2,7 @@
 
 A CÂMARA MUNICIPAL DE MARICÁ APROVOU E EU PROMULGO A SEGUINTE EMENDA:
 
-**Art. 1º** Suprime a palavra "públicas" no inciso X do art. 426, da Seção VIII, Título VII, que passa a ter a seguinteredação:
+**Art. 1º** Suprime a palavra "públicas" no [inciso X do art. 426, da Seção VIII, Título VII](/1989-1992/1990/lei-organica/LOM-00000-1990.md), que passa a ter a seguinteredação:
 
 "X - conceder gratuidade nos transportes coletivos de empresas do Município para pessoas portadoras de deficiência, com reconhecida dificuldade de locomoção e seu acompanhante;"
 
@@ -13,4 +13,4 @@ Câmara M. de Maricá, 10 de outubro de 1990.
 DILSON DE SOUZA BEZERRA
 PRESIDENTE
 
-<span style="color: #FF0000;">Este texto não substitui o publicado no Diário Oficial.</span>
+>Este texto não substitui o publicado no Diário Oficial.
