--- a/1993-1996/1993/lei-organica/ELO-00004-1993.md
+++ b/1993-1996/1993/lei-organica/ELO-00004-1993.md
@@ -1,8 +1,8 @@
-# EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ-RJ Nº 004 DE 30 DE SETEMBRO DE 1993.
+## EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ-RJ Nº 004 DE 30 DE SETEMBRO DE 1993.
 
 A CÂMARA MUNICIPAL DE MARICÁ APROVOU E EU PROMULGO A SEGUINTE EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ:
 
-Art. 1º Fica alterado o Artigo 1º da Lei Complementar nº 025 de 21 de julho de 1992, que alterou o Artigo 438 da Lei Orgânica do Município de Maricá, o qual passará a ter a seguinte redação:
+Art. 1º Fica alterado o Artigo 1º da Lei Complementar nº 025 de 21 de julho de 1992, que alterou o Artigo 438 da [Lei Orgânica do Município de Maricá](/1989-1992/1990/lei-organica/LOM-00000-1990.md), o qual passará a ter a seguinte redação:
 
 "Art. 438. Somente poderão ser contratados, por tempo determinado o pessoal que atenderá às necessidades temporárias de excepcional interesse público, através de contratos administrativos. A Lei Municipal definirá as situações que serão consideradas de necessidade temporária de excepcional interesse público, bem como os prazos máximos e suas prorrogações, admissíveis e cada caso específico."
 
