--- a/1993-1996/1993/lei-organica/ELO-00005-1993.md
+++ b/1993-1996/1993/lei-organica/ELO-00005-1993.md
@@ -1,10 +1,10 @@
-# EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ-RJ Nº 005 DE 16 DE DEZEMBRO DE 1993.
+## EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ-RJ Nº 005 DE 16 DE DEZEMBRO DE 1993.
 
 (LEI COMPLEMENTAR Nº 040 DE 16 DE DEZEMBRO DE 1993)
 
 A CÂMARA MUNICIPAL DE MARICÁ APROVOU E EU PROMULGO A SEGUINTE EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ:
 
-Art. 1º Fica alterado o Artigo 1º da Lei Complementar nº 025 de 21 de julho de 1992, que alterou o Artigo 438 da Lei Orgânica do Município de Maricá, o qual passará a ter a seguinte redação:
+Art. 1º Fica alterado o Artigo 1º do artigo 73 da [Lei Orgânica Municipal](/1989-1992/1990/lei-organica/LOM-00000-1990.md), que passa a ter a seguinte redação:
 
 "Art. 73. (...)
 
@@ -12,7 +12,7 @@ Art. 1º Fica alterado o Artigo 1º da Lei Complementar nº 025 de 21 de julho d
 
 Art. 2º Esta Lei Complementar entrará em vigor na data de sua aprovação, revogando-se as disposições em contrário.
 
-Câmara M. de Maricá, 16 de dezembro de 1993..
+Câmara M. de Maricá, 16 de dezembro de 1993.
 
 Wanderley Tavares Guapyassú de Sá
 Presidente
