--- a/1997-2000/1999/lei-organica/ELO-00015-1999.md
+++ b/1997-2000/1999/lei-organica/ELO-00015-1999.md
@@ -1,12 +1,12 @@
-# EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ Nº 015 DE 29 DE SETEMBRO DE 1999.
+## EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ Nº 015 DE 29 DE SETEMBRO DE 1999.
 
 Dispõe sobre a revogação do artigo 15 e o seu parágrafo único do Ato das Disposições Transitórias da Lei Orgânica de Maricá.
 
 A MESA DA CÂMARA MUNICIPAL, NOS TERMOS DOS INCISOS I E II, PARÁGRAFOS 1º, 2º, 3º E 4º DO ARTIGO 104, DA LEI ORGÂNICA DO MUNICÍPIO, PROMULGA A SEGUINTE EMENDA AO TEXTO DA LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ:
 
-**Art. 1º** Fica revogado o artigo 15 e o seu parágrafo único do Ato das Disposições Transitórias da [Lei Orgânica de Maricá](/legislatura-1989-1992/1990/lei-organica/lei-organica-1990.md).
+Art. 1º Fica revogado o artigo 15 e o seu parágrafo único do Ato das Disposições Transitórias da [Lei Orgânica de Maricá](/1989-1992/1990/lei-organica/LOM-00000-1990.md).
 
-**Art. 2º** Esta Emenda à Lei Orgânica entra em vigor na data de sua publicação.
+Art. 2º Esta Emenda à Lei Orgânica entra em vigor na data de sua publicação.
 
 Câmara Municipal de Maricá, 29 de setembro de 1999.
 
@@ -22,4 +22,4 @@ Adelso Pereira
 Ledy Francisco da Costa
 2ª Secretária
 
-<span style="color: #FF0000;">Este texto não substitui o publicado no Diário Oficial.</span>
+>Este texto não substitui o publicado no Diário Oficial.
