--- a/1997-2000/1999/lei-organica/ELO-00016-1999.md
+++ b/1997-2000/1999/lei-organica/ELO-00016-1999.md
@@ -4,7 +4,7 @@ Dá nova redação ao artigo 110 e seus parágrafos da Lei Orgânica do Municíp
 
 A MESA DA CÂMARA MUNICIPAL, NOS TERMOS DOS INCISOS I E II, PARÁGRAFOS 1º, 2º, 3º E 4º DO ARTIGO 104, DA LEI ORGÂNICA DO MUNICÍPIO, PROMULGA A SEGUINTE EMENDA AO TEXTO DA LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ:
 
-**Art. 1º** O artigo 110, bem como os seus parágrafos, da [Lei Orgânica de Maricá](/legislatura-1989-1992/1990/lei-organica/lei-organica-1990.md) passam a ter as seguintes redações:
+**Art. 1º** O artigo 110, bem como os seus parágrafos, da [Lei Orgânica de Maricá](/1989-1992/) passam a ter as seguintes redações:
 
 "Art. 110. A Câmara, concluída a votação, enviará, no prazo máximo de cinco dias úteis, o Projeto de Lei aprovado ao Prefeito Municipal, que, aquiescendo, o sancionará.
 
