--- a/1997-2000/2000/lei-organica/ELO-00022-2000.md
+++ b/1997-2000/2000/lei-organica/ELO-00022-2000.md
@@ -1,14 +1,14 @@
-# EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ Nº 022 DE 18 DE  FEVEREIRO DE 2000.
+## EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ Nº 022 DE 18 DE  FEVEREIRO DE 2000.
 
 Dá nova redação ao art. 69, aos §§ 1º, 4º e 5º do art. 92 da LOM.
 
 A MESA DA CÃMARA DO MUNICÍPIO DE MARICÁ, em nome do povo maricaense, promulga a seguinte Emenda à Lei Orgânica do Município de Maricá:
 
-**Art. 1º** O artigo 69 da [Lei Orgânica do Município de Maricá](/legislatura-1989-1992/1990/lei-organica/lei-organica-1990.md) passa a ter a seguinte redação:
+Art. 1º O artigo 69 da [Lei Orgânica do Município de Maricá](//1989-1992/1990/lei-organica/LOM-00000-1990.md) passa a ter a seguinte redação:
 
 "Art. 69. A Câmara Municipal reunir-se-á, anualmente e ordinariamente, de 15 de fevereiro a 30 de junho e de 1º de agosto a 15 de dezembro, na sede do Município ou, também, conforme o Regimento Interno dispuser."
 
-**Art. 2º** O parágrafo 1º do artigo 92 da Lei Orgânica do Município de Maricá, passa a ter a seguinte redação:
+Art. 2º O parágrafo 1º do artigo 92 da Lei Orgânica do Município de Maricá, passa a ter a seguinte redação:
 
 "Art. 92. (...)
 
@@ -16,12 +16,34 @@ A MESA DA CÃMARA DO MUNICÍPIO DE MARICÁ, em nome do povo maricaense, promulga
 
 "PROMETO CUMPRIR A CONSTITUIÇÃO DA REPÚBLICA, A CONSTITUIÇÃO DO ESTADO DO RIO DE JANEIRO, A LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ E O REGIMENTO INTERNO DA CÂMARA MUNICIPAL, OBSERVAR AS LEIS, DESEMPENHAR COM LEALDADE O MANDATO QUE ME FOI CONFIADO E TRABALHAR PELO PROGRESSO DO MUNICÍPIO E BEM-ESTAR DO SEU POVO."
 
-**Art. 3º** O parágrafo 4º do artigo 92 da Lei Orgânica do Município de Maricá, passa a ter a seguinte redação:
+Art. 3º O parágrafo 4º do artigo 92 da Lei Orgânica do Município de Maricá, passa a ter a seguinte redação:
 
 "Art. 92. (...)
 
 § 4º Imediatamente após a posse, os Vereadores reunir-se-ão sob a Presidência do Vereador, conforme o parágrafo 1º deste artigo e, havendo maioria absoluta dos membros da Câmara, elegerão os componentes da Mesa Diretora, por escrutínio secreto e maioria simples dos votos, considerando-se automaticamente empossados os eleitos, sen do que, no caso de empate, será eleito o mais votado na eleição popular.
 
+I - no caso de haver uma ou mais chapas concorrentes, seus registros serão feitos no início da reunião, devendo estar cada uma acompanhada das declarações de consentimento dos seus respectivos integrantes, não podendo um mesmo Vereador integrar mais de uma chapa;
 
+II - um só ato de votação para todos os cargos.
 
-<span style="color: #FF0000;">Este texto não substitui o publicado no Diário Oficial.</span>
+Art. 4º O parágrafo 5º do artigo 92 da Lei Orgânica do Município de Maricá, passa a ter a seguinte redação:
+
+§ 5º Inexistindo número legal, o Vereador designado Presidente, conforme o parágrafo 1º deste artigo, permanecerá na Presidência e convocará sessões diárias, até que seja eleita a Mesa Diretora.
+
+Art. 5º Esta Emenda à Lei Orgânica do Município de Maricá entra em vigor na data de sua publicação.
+
+Câmara Municipal de Maricá, 18 de fevereiro de 2000.
+
+José Delaroli
+Presidente
+
+José Glauber Sampaio Cartaxo
+Vice-Presidente
+
+Adelso Pereira
+1º Secretário
+
+Ledy Francisco da Costa
+2ª Secretária
+
+>Este texto não substitui o publicado no Diário Oficial.
