--- a/2001-2004/2004/lei-organica/ELO-00027-2004.md
+++ b/2001-2004/2004/lei-organica/ELO-00027-2004.md
@@ -1,16 +1,16 @@
-#EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ Nº 027 DE 5 DE NOVEMBRO DE 2004.
+## EMENDA À LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ Nº 027 DE 5 DE NOVEMBRO DE 2004.
 
 DÁ NOVA REDAÇÃO AO CAPUT DO ART. 93 DA LEI ORGÂNICA DO MUNICÍPIO DE MARICÁ E REVOGA O SEU PARÁGRAFO ÚNICO.
 
 A MESA DA CÃMARA DO MUNICÍPIO DE MARICÁ, em nome do povo maricaense, promulga a seguinte Emenda à Lei Orgânica do Município de Maricá:
 
-**Art. 1º** O artigo 93 da [Lei Orgânica do Município de Maricá](/legislatura-1989-1992/1990/lei-organica/lei-organica-1990.md) passa a ter a seguinte redação:
+Art. 1º O artigo 93 da [Lei Orgânica do Município de Maricá](/1989-1992/1990/lei-organica/LOM-00000-1990.md) passa a ter a seguinte redação:
 
 "Art. 93. O mandato da Mesa Diretora da Câmara Municipal de Maricá será de dois anos, permitidas reconduções para os mesmos cargos nas eleições subsequentes. (NR)."
 
-**Art. 2º** Fica revogado o Parágrafo Único do Art. 93 da Lei Orgânica do Município de Maricá.
+Art. 2º Fica revogado o Parágrafo Único do Art. 93 da Lei Orgânica do Município de Maricá.
 
-**Art. 3º** Esta Emenda à Lei Orgânica do Município de Maricá entra em vigor na data de sua publicação.
+Art. 3º Esta Emenda à Lei Orgânica do Município de Maricá entra em vigor na data de sua publicação.
 
 Câmara Municipal de Maricá, Estado do Rio de Janeiro, 5 de novembro de 2004.
 
@@ -26,4 +26,4 @@ Vereador JUVANDIR COUTINHO VALENTE
 Vereadora ADEMILTON DA SILVA DINIZ
 2ª Secretária
 
-<span style="color: #FF0000;">Este texto não substitui o publicado no Diário Oficial.</span>
+>Este texto não substitui o publicado no Diário Oficial.
