--- a/2025-2028/2025/decreto/DEC-00001-2025.md
+++ b/2025-2028/2025/decreto/DEC-00001-2025.md
@@ -1,14 +1,16 @@
 ## DECRETO N° 1, DE 1° DE JANEIRO DE 2025.
 
+[(Revogado pelo Decreto nº 3, de 2025)](/2025-2028/2025/decreto/DEC-00003-2025.md)
+
 EXONERA OS OCUPANTES DE CARGOS EM COMISSÃO E DE FUNÇÕES GRATIFICADAS, NO ÂMBITO DA ADMINISTRAÇÃO DIRETA.
  
 O PREFEITO DO MUNICÍPIO DE MARICÁ, no uso de suas atribuições legais, e CONSIDERANDO a revogação da Lei Complementar n° 379, de 25 de maio de 2023, e a edição da Lei Complementar n° 398, de 12 de dezembro de 2024,
  
 DECRETA:
 
-Art. 1° Ficam exonerados, a partir de 1° de janeiro de 2025, todos os servidores ocupantes de cargos em comissão e de funções gratificadas, no âmbito da Administração Direta, em razão da reestruturação de que trata a Lei Complementar n° 398, de 12 de dezembro de 2024.
+~~Art. 1° Ficam exonerados, a partir de 1° de janeiro de 2025, todos os servidores ocupantes de cargos em comissão e de funções gratificadas, no âmbito da Administração Direta, em razão da reestruturação de que trata a Lei Complementar n° 398, de 12 de dezembro de 2024.~~
 
-Art. 2° Este Decreto entra em vigor na data de sua publicação, produzindo efeitos
+~~Art. 2° Este Decreto entra em vigor na data de sua publicação, produzindo efeitos~~
  
 Marica, 1º de janeiro de 2025.
 Washington Luiz Cardoso Siqueira
