--- a/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md
+++ b/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md
@@ -1,4 +1,4 @@
-## LEI Nº 1517 DE 23 DE ABRIL DE 1996
+# LEI Nº 1517 DE 23 DE ABRIL DE 1996
 
 Dispõe sobre o Plano de Cargos, Carreiras e Remuneração dos Profissionais Servidores Públicos do Poder Executivo de Maricá.
 
@@ -22,15 +22,21 @@ Parágrafo Único. (Vetado)
 
 Art. 6º Os cargos previstos no Anexo I desta Lei, constituem o Quadro Permanente de Pessoal do Poder Executivo Municipal de Maricá e estão assim estruturados:
 
-1.  Cargos de Provimento Efetivo - Cargos Operacionais.
-    * a) Grupo Ocupacional I
-        1.  Subgrupo 1 - Atividades Profissionais de Nível Operacional Elementar;
-        2.  Subgrupo 2 - Atividades Profissionais de Nível Operacional Médio;
-        3.  Subgrupo 3 - Atividades Profissionais de Nível Operacional Superior.
+I - Cargos de Provimento Efetivo - Cargos Operacionais.
+
+a) Grupo Ocupacional I
+
+1. Subgrupo 1 - Atividades Profissionais de Nível Operacional Elementar;
+
+1.  Subgrupo 2 - Atividades Profissionais de Nível Operacional Médio;
+
+2.  Subgrupo 3 - Atividades Profissionais de Nível Operacional Superior.
    
-2.  Cargos de Provimento em Comissão - Cargos de Gestão.
-    * a) Grupo Ocupacional II Cargos de Provimento em Comissão de símbolos: SS/DAS - respectivamente de Secretário Municipal, e de Direção e Assessoramento superiores.
-    * b) Grupo Ocupacional III - Cargos de provimento em Comissão de símbolos DAI - Direção e Assistência intermediárias.
+II -  Cargos de Provimento em Comissão - Cargos de Gestão.
+
+a) Grupo Ocupacional II Cargos de Provimento em Comissão de símbolos: SS/DAS - respectivamente de Secretário Municipal, e de Direção e Assessoramento superiores.
+
+b) Grupo Ocupacional III - Cargos de provimento em Comissão de símbolos DAI - Direção e Assistência intermediárias.
 
 Art. 7º O Plano de Cargos hierarquiza cada cargo, de acordo com as áreas de atuações, agrupando-os em Grupos e Subgrupos Ocupacionais e respectivos Níveis Operacionais, descrevendo suas atribuições específicas e o seu quantitativo.
 
@@ -68,25 +74,17 @@ Art. 12 Para os efeitos desta Lei define-se:
 
 I - Cargo - É a unidade básica da estrutura organizacional do Poder Público do Município de Maricá. É composto de um conjunto de atribuições e responsabilidades, que são acometidas a um profissional servidor público municipal, criado por Lei com nomenclatura própria, quantidade e vencimentos definidos pelos cofres públicos e providos em caráter Efetivo ou em Comissão.
 
-> [!NOTE]
-> Information the user should notice even if skimming.
+> [!IMPORTANTE]
+> Não localizamos:
+> * a parte final do art. 12;
+> * o art. 13, e
+> * a parte inicial do art. 14.
 
-> [!TIP]
-> Optional information to help a user be more successful.
+I - Ascensão - É a progressão do profissional servidor público para Cargo pertencente a um nível Operacional diferenciado de Nível Operacional mais elevado.
 
-> [!IMPORTANT]
-> Essential information required for user success.
+a) Os critérios para a ascensão são os mesmos utilizados para a Promoção por Mérito observando-se entretanto, o interstício de 6 (seis) anos no cargo anterior.
 
-> [!CAUTION]
-> Negative potential consequences of an action.
-
-> [!WARNING]
-> Dangerous certain consequences of an action.
-
-1.  Ascensão - É a progressão do profissional servidor público para Cargo pertencente a um nível Operacional diferenciado de Nível Operacional mais elevado.
-    * A) Os critérios para a ascensão são os mesmos utilizados para a Promoção por Mérito observando-se entretanto, o interstício de 6 (seis) anos no cargo anterior.
-
-* Parágrafo Único - Poderão ocorrer progressões simultâneas de Mérito, Tempo de Serviço e Ascensão, desde que hajam coincidências de interstícios.
+Parágrafo Único - Poderão ocorrer progressões simultâneas de Mérito, Tempo de Serviço e Ascensão, desde que hajam coincidências de interstícios.
 
 Art. 15 Independe de posse a investidura em cargo quando decorrente de promoção: por Mérito ou por Ascensão.
 
@@ -106,20 +104,25 @@ f) Produtividade;
 
 g) Responsabilidade.
 
-* Parágrafo 1º - Serão avaliados, conjuntamente os fatores de que trata este artigo, as condições de trabalho para que o desenvolvimento do Profissional Servidor não seja prejudicado.
-* Parágrafo 2º Serão adotados procedimentos que contemplem, não só, a avaliação do Dirigente ou Assessor, ao qual está diretamente subordinado o Profissional Servidor Público, como a auto-avaliação.
-* Parágrafo 3º Fica assegurado ao Profissional Servidor Público, o amplo conhecimento tanto dos critérios de avaliação, quanto do resultado final do seu desempenho.
+§  1º Serão avaliados, conjuntamente os fatores de que trata este artigo, as condições de trabalho para que o desenvolvimento do Profissional Servidor não seja prejudicado.
 
-Art. 17 As avaliações de desempenho onde seja verificada discrepância entre os profissionais Servidores e os Dirigentes ou Assessores aos quais o Profissional Servidor Público está subordinado, serão encaminhados a Junta de Recursos Administrativos, para o equacionamento do problema, conforme encaminhamento ao Prefeito.
+§  2º Serão adotados procedimentos que contemplem, não só, a avaliação do Dirigente ou Assessor, ao qual está diretamente subordinado o Profissional Servidor Público, como a auto-avaliação.
 
-Art. 18 Os critérios básicos para a avaliação de desempenho, serão regulamentados em Lei específica, conforme o disposto no art. 5º desta Lei.
+§ 3º Fica assegurado ao Profissional Servidor Público, o amplo conhecimento tanto dos critérios de avaliação, quanto do resultado final do seu desempenho.
 
-Art. 19 O Plano de Remuneração assegura ao Profissional Servidor Público do Poder Executivo, uma retribuição pecuniária, fixada em Lei, obedecidos os limites constitucionais, que será paga mensalmente.
+Art. 17. As avaliações de desempenho onde seja verificada discrepância entre os profissionais Servidores e os Dirigentes ou Assessores aos quais o Profissional Servidor Público está subordinado, serão encaminhados a Junta de Recursos Administrativos, para o equacionamento do problema, conforme encaminhamento ao Prefeito.
 
-* Parágrafo 1º - A remuneração do Profissional Servidor Público, é o somatório do respectivo vencimento-base do cargo de Provimento Efetivo, acrescido das gratificações e/ou vantagens, permanentes ou temporários, estabelecidos em Lei.
-* Parágrafo 2º O vencimento base constitui a retribuição pecuniária mínima, devida ao profissional Servidor Público, ocupante de cargo de Provimento Efetivo, hierarquicamente posicionado, estabelecido segundo as referências e seus respectivos valores, contidos no Anexo II desta Lei.
-* Parágrafo 3º - Todas as Classes dos diferentes Níveis Operacionais, serão constituídas de 11 (onze) referências, de acordo com o tempo de serviço e a formação profissional.
-* Parágrafo 1º (numeração repetida no original) - O vencimento base da referência inicial da classe B, do subgrupo I, será sempre igual ao vencimento base da $7^{a}$ referência do mesmo subgrupo, da classe anterior, e assim, sucessivamente, o mesmo critério será adotado para as demais classes, considerando-se sempre a referência inicial, da classe anterior, do mesmo subgrupo.
+Art. 18. Os critérios básicos para a avaliação de desempenho, serão regulamentados em Lei específica, conforme o disposto no art. 5º desta Lei.
+
+Art. 19. O Plano de Remuneração assegura ao Profissional Servidor Público do Poder Executivo, uma retribuição pecuniária, fixada em Lei, obedecidos os limites constitucionais, que será paga mensalmente.
+
+§  1º A remuneração do Profissional Servidor Público, é o somatório do respectivo vencimento-base do cargo de Provimento Efetivo, acrescido das gratificações e/ou vantagens, permanentes ou temporários, estabelecidos em Lei.
+
+§ 2º O vencimento base constitui a retribuição pecuniária mínima, devida ao profissional Servidor Público, ocupante de cargo de Provimento Efetivo, hierarquicamente posicionado, estabelecido segundo as referências e seus respectivos valores, contidos no Anexo II desta Lei.
+
+§ 3º Todas as Classes dos diferentes Níveis Operacionais, serão constituídas de 11 (onze) referências, de acordo com o tempo de serviço e a formação profissional.
+
+§ 1º (numeração repetida no original) - O vencimento base da referência inicial da classe B, do subgrupo I, será sempre igual ao vencimento base da 7ª referência do mesmo subgrupo, da classe anterior, e assim, sucessivamente, o mesmo critério será adotado para as demais classes, considerando-se sempre a referência inicial, da classe anterior, do mesmo subgrupo.
 
 Art. 20 Os Servidores do Quadro Permanente, do Poder Executivo, ficam submetidos ao regime de Adicional por tempo de Serviço, sendo o primeiro de 10% (dez por cento) e os demais de 5% (cinco por cento).
 
@@ -127,8 +130,9 @@ Art. 21 A revisão geral das Remunerações dos profissionais Servidores Públic
 
 Art. 22 Fica estabelecido como data base, da revisão das remunerações dos Profissionais Servidores do Município de Maricá, previsto neste Plano de Cargos, Carreiras e Remunerações, será efetivado quando houver existência de recursos financeiros, mediante os seguintes critérios:
 
-1.  Todos os profissionais servidores Públicos do Poder Executivo do Município de Maricá, serão, inicialmente, enquadrados nas referências iniciais, de suas classes. Quando este enquadramento provocar uma perda na Remuneração do profissional servidor, promover-se-á, imediatamente, o enquadramento por Tempo de Serviço.
-2.  O enquadramento definitivo, por Classe, dentro do mesmo subgrupo Ocupacional, por tempo de serviço, ocorrerá a partir de 1º de janeiro de 1997, por cargo, após o levantamento detalhado.
+I - Todos os profissionais servidores Públicos do Poder Executivo do Município de Maricá, serão, inicialmente, enquadrados nas referências iniciais, de suas classes. Quando este enquadramento provocar uma perda na Remuneração do profissional servidor, promover-se-á, imediatamente, o enquadramento por Tempo de Serviço.
+
+II - O enquadramento definitivo, por Classe, dentro do mesmo subgrupo Ocupacional, por tempo de serviço, ocorrerá a partir de 1º de janeiro de 1997, por cargo, após o levantamento detalhado.
 
 Art. 24 O profissional servidor público do Poder executivo do Município de Maricá, do Quadro Permanente, que receber Gratificação de Representação de Gabinete ou Gratificação pelo exercício de cargo em Comissão, por 5 (cinco) anos consecutivos, ou mais, ou 8 (oito) intercalados, fará jus a incorporação do cargo mais elevado, que tenha exercido no Poder Público Municipal por, no mínimo, 1 (um) ano.
 
@@ -379,7 +383,8 @@ P.M.M. / S.M.M.
 ---
 
 ## ANEXO IV
-### QUADRO PERMANENTE
+
+QUADRO PERMANENTE
 P.M.M. B) Cargos de Provimento em Comissão – Cargos de Gestão – SMA
 
 Grupo Ocupacional II - Cargos de provimento em comissão de Secretário Municipal - símbolo SS e de Direção e Assessoramento Superiores – Símbolo DAS
