--- a/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md
+++ b/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md
@@ -203,56 +203,120 @@ B) Cargos de Provimento em Comissão
 
 ---
 
-### ANEXO II-A
+### ~~ANEXO II-A~~
 
-|  A) Cargos de Provimento Efetivo - Cargos Operacionais |
+|  ~~A) Cargos de Provimento Efetivo - Cargos Operacionais~~ |
 | :--- |
-| Grupo Ocupacional I: Cargos Operacionais |
-| Subgrupo Ocupacional 1: Atividades Profissionais de Nível Elementar |
-| Nível Operacional: Elementar |
-| Classe A: Composta de Cargos com nível de escolaridade e/ou habilitação específica equivalente a 4ª série do 1º grau. Desenvolvimento de atribuições de baixa complexidade. |
+| ~~Grupo Ocupacional I: Cargos Operacionais~~ |
+| ~~Subgrupo Ocupacional 1: Atividades Profissionais de Nível Elementar~~ |
+| ~~Nível Operacional: Elementar~~ |
+| ~~Classe A: Composta de Cargos com nível de escolaridade e/ou habilitação específica equivalente a 4ª série do 1º grau. Desenvolvimento de atribuições de baixa complexidade.~~ |
 
-| Cargos | Referência | Vencimento Base |
+| ~~Cargos~~ | ~~Referência~~ | ~~Vencimento Base~~ |
 | :--- | :---: | :---: |
-| 01-Auxiliar de coveiro | 01 | R\$100.00 |
-| 02-Auxiliar de mecânico | 02 | R\$105.00 |
-| 03-Ajudante de Manutenção | 03 | R\$110.25 |
-| 04-Contínuo | 04 | R\$115.76 |
-| 05- Garçon | 05 | R\$121.55 |
-| 06-Gari | 06 | R\$127.63 |
-| 07- Jardineiro | 07 | R\$134.01 |
-| 08-Lixeiro | 08 | R\$140.71 |
-| 09-Merendeira | 09 | R\$147.75 |
-| 10-Porteiro | 10 | R\$155.13 |
-| 11-Servente | 11 | R\$162.89 |
-| 12- Trab. Braçal | | |
-| 13-Vigia | | |
-| 14-Zelador | | |
+| ~~01-Auxiliar de coveiro~~ | ~~01~~ | ~~R$100.00~~ |
+| ~~02-Auxiliar de mecânico~~ | ~~02~~ | ~~R\$105.00~~ |
+| ~~03-Ajudante de Manutenção~~ | ~~03~~ | ~~R\$110.25~~ |
+| ~~04-Contínuo~~ | ~~04~~ | ~~R\$115.76~~ |
+| ~~05- Garçon~~ | ~~05~~ | ~~R\$121.55~~ |
+| ~~06-Gari~~ | ~~06~~ | ~~R\$127.63~~ |
+| ~~07- Jardineiro~~ | ~~07~~ | ~~R\$134.01~~ |
+| ~~08-Lixeiro~~ | ~~08~~ | ~~R\$140.71~~ |
+| ~~09-Merendeira~~ | ~~09~~ | ~~R\$147.75~~ |
+| ~~10-Porteiro~~ | ~~10~~ | ~~R\$155.13~~ |
+| ~~11-Servente~~ | ~~11~~ | ~~R\$162.89~~ |
+| ~~12- Trab. Braçal~~ | | |
+| ~~13-Vigia~~ | | |
+| ~~14-Zelador~~ | | |
+
+### ~~ANEXO II-A~~
+
+[~~(Redação dada pela Lei 2031-R, de 09/10/2002)~~](/2001-2004/2002/lei-ordinaria/LEI-02031-2002.md)
+
+|  ~~A) Cargos de Provimento Efetivo - Cargos Operacionais~~ |
+| :--- |
+| ~~Grupo Ocupacional I: Cargos Operacionais~~ |
+| ~~Subgrupo Ocupacional 1: Atividades Profissionais de Nível Elementar~~ |
+| ~~Nível Operacional: Elementar~~ |
+| ~~Classe A: Composta de Cargos com nível de escolaridade e/ou habilitação específica equivalente a 4ª série do 1º grau. Desenvolvimento de atribuições de baixa complexidade.~~ |
+
+| ~~Cargos~~ | ~~Referência~~ | ~~Vencimento Base~~ |
+| :--- | :---: | :---: |
+| ~~01 - Auxiliar de coveiro~~ | ~~01~~ | ~~R$ 200,00~~ |
+| ~~01 A - Auxiliar de Cozinha~~ | ~~02~~ | ~~R$ 210,00~~ |
+| ~~02 - Auxiliar de mecânico~~ | ~~03~~ | ~~R$ 220,50~~ |
+| ~~03 - Ajudante de Manutenção~~ | ~~04~~ | ~~R$ 231,52~~ |
+| ~~04 - Contínuo~~ | ~~05~~ | ~~R$ 243,09~~ |
+| ~~04 A - Lavadeira~~ | ~~06~~ | ~~R$ 255,24~~ |
+| ~~05 - Garçon~~ | ~~07~~ | ~~R$ 268,00~~ |
+| ~~06 - Gari~~ | ~~08~~ | ~~R$ 281,40~~ |
+| ~~07 - Jardineiro~~ | ~~09~~ | ~~R$ 295,47~~ |
+| ~~08 - Lixeiro~~ | ~~10~~ | ~~R$ 310,24~~ |
+| ~~09 - Merendeira~~ | ~~11~~ | ~~R$ 325,75~~ |
+| ~~10 - Porteiro~~ | | |
+| ~~11 - Servente~~ | | |
+| ~~12 - Trab. Braçal~~ | | |
+| ~~13 - Vigia~~ | | |
+| ~~14 - Zelador~~ | | |
 
 ---
 
-### ANEXO II-B
+### ~~ANEXO II-B~~
 
-|  A) Cargos de Provimento Efetivo - Cargos Operacionais |
+|  ~~A) Cargos de Provimento Efetivo - Cargos Operacionais~~ |
 | :--- |
-| Grupo Ocupacional I: Cargos Operacionais |
-| Subgrupo Ocupacional 1: Atividades Profissionais de Nível Elementar |
-| Nível Operacional: Elementar com habilitação |
-| Classe B: Composta de cargos com nível de escolaridade até a 4ª série do 1º grau, com habilitação específica e exigência de experiência profissional comprovada. |
+| ~~Grupo Ocupacional I: Cargos Operacionais~~ |
+| ~~Subgrupo Ocupacional 1: Atividades Profissionais de Nível Elementar~~ |
+| ~~Nível Operacional: Elementar com habilitação~~ |
+| ~~Classe B: Composta de cargos com nível de escolaridade até a 4ª série do 1º grau, com habilitação específica e exigência de experiência profissional comprovada.~~ |
 
-| Cargos | Referência | Vencimento Base |
+| ~~Cargos~~ | ~~Referência~~ | ~~Vencimento Base~~ |
 | :--- | :---: | :---: |
-| 15 - Bombeiro Hidráulico | 07 | R\$134.01 |
-| 16 - Borracheiro | 08 | R\$140.71 |
-| 17 - Calceteiro | 09 | R\$147.73 |
-| 18 - Carpinteiro | 10 | R\$155.15 |
-| 19 - Coveiro | 11 | R\$162.80 |
-| 20 - Eletricista | 12 | R\$171.00 |
-| 21 - Eletricista de autos | 13 | R\$179.50 |
-| 22 - Ferramenteiro | 14 | R\$188.50 |
-| 23 - Inspetor de alunos | 15 | R\$197.93 |
-| 24 - Lanterneiro | 16 | R\$207.80 |
-| 25 - Lubrificador | 17 | R\$218.20 |
+| ~~15 - Bombeiro Hidráulico~~ | ~~07~~ | ~~R\$134.01~~ |
+| ~~16 - Borracheiro~~ | ~~08~~ | ~~R\$140.71~~ |
+| ~~17 - Calceteiro~~ | ~~09~~ | ~~R\$147.73~~ |
+| ~~18 - Carpinteiro~~ | ~~10~~ | ~~R\$155.15~~ |
+| ~~19 - Coveiro~~ | ~~11~~ | ~~R\$162.80~~ |
+| ~~20 - Eletricista~~ | ~~12~~ | ~~R\$171.00~~ |
+| ~~21 - Eletricista de autos~~ | ~~13~~ | ~~R\$179.50~~ |
+| ~~22 - Ferramenteiro~~ | ~~14~~ | ~~R\$188.50~~ |
+| ~~23 - Inspetor de alunos~~ | ~~15~~ | ~~R\$197.93~~ |
+| ~~24 - Lanterneiro~~ | ~~16~~ | ~~R\$207.80~~ |
+| ~~25 - Lubrificador~~ | ~~17~~ | ~~R\$218.20~~ |
+| ~~26 - Marceneiro~~ | | |
+| ~~27 - Mecânico~~ | | |
+| ~~28 - Mecânico/Torneiro~~ | | |
+| ~~29 - Mestre de obras~~ | | |
+| ~~30 - Pedreiro~~ | | |
+| ~~31 - Pintor de veículos~~ | | |
+| ~~32 - Salva vidas~~ | | |
+| ~~33 - Soldador~~ | | |
+
+### ~~ANEXO II-B~~
+
+[~~(Redação dada pela Lei 2031-R, de 09/10/2002)~~](/2001-2004/2002/lei-ordinaria/LEI-02031-2002.md)
+
+|  ~~A) Cargos de Provimento Efetivo - Cargos Operacionais~~ |
+| :--- |
+| ~~Grupo Ocupacional I: Cargos Operacionais~~ |
+| ~~Subgrupo Ocupacional 1: Atividades Profissionais de Nível Elementar~~ |
+| ~~Nível Operacional: Elementar com habilitação~~ |
+| ~~Classe B: Composta de cargos com nível de escolaridade até a 4ª série do 1º grau, com habilitação específica e exigência de experiência profissional comprovada.~~ |
+
+| ~~Cargos~~ | ~~Referência~~ | ~~Vencimento Base~~ |
+| :--- | :---: | :---: |
+| ~~15 - Bombeiro Hidráulico~~ | ~~07~~ | ~~R$ 268,00~~ |
+| ~~15 A - Cozinheira~~ | ~~08~~ | ~~R$ 281,40~~ |
+| ~~16 - Borracheiro~~ | ~~09~~ | ~~R$ 295,47~~ |
+| ~~17 - Calceteiro~~ | ~~10~~ | ~~R$ 310,24~~ |
+| ~~18 - Carpinteiro~~ | ~~11~~ | ~~R$ 325,75~~ |
+| ~~19 - Coveiro~~ | ~~12~~ | ~~R$ 342,03~~ |
+| ~~20 - Eletricista~~ | ~~13~~ | ~~R$ 359,13~~ |
+| ~~21 - Eletricista de autos~~ | ~~14~~ | ~~R$ 377,08~~ |
+| ~~22 - Ferramenteiro~~ | ~~15~~ | ~~R$ 395,93~~ |
+| ~~23 - Inspetor de alunos~~ | ~~16~~ | ~~R$ 415,72~~ |
+| ~~24 - Lanterneiro~~ | ~~17~~ | ~~R$ 436,50~~ |
+| 25 - Lubrificador | | |
 | 26 - Marceneiro | | |
 | 27 - Mecânico | | |
 | 28 - Mecânico/Torneiro | | |
@@ -261,6 +325,8 @@ B) Cargos de Provimento em Comissão
 | 31 - Pintor de veículos | | |
 | 32 - Salva vidas | | |
 | 33 - Soldador | | |
+
+---
 
 ---
 
