--- a/legislatura/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md
+++ b/legislatura/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md
@@ -10,7 +10,7 @@ Art. 2º Para os efeitos desta Lei, denominar-se-ão, respectivamente, o Sistema
 
 Art. 3º O Plano de Cargos, Carreiras e Remunerações dos Profissionais Servidores Públicos Municipais de Maricá, é aplicável a todos os profissionais servidores públicos municipais ativos, inativos e aposentados do Poder Executivo Municipal de Maricá, assim como os seus dependentes e legatários, na forma da Lei.
 
-Parágrafo Único - O Regime Jurídico Único dos Profissionais Servidores Públicos Municipais do Poder Executivo de Maricá, é o Estatutário, consolidado pela [Lei Complementar nº 001, de 9 de maio de 1990](/1989-1992/1990/lei-complementar/LCM-00001-1990.md).
+Parágrafo Único - O Regime Jurídico Único dos Profissionais Servidores Públicos Municipais do Poder Executivo de Maricá, é o Estatutário, consolidado pela [Lei Complementar nº 001, de 9 de maio de 1990](/1989-1992/1990/lei-complementar/LCM-00001-1990).
 
 Art. 4º Os cargos de provimento Efetivo do Poder Executivo de Maricá, serão organizados hierarquicamente, dos menos complexos de Nível Elementar, aos mais complexos de Nível Superior.
 
@@ -20,7 +20,7 @@ Art. 5º O Plano de Carreiras, estruturado de conformidade com o disposto no Par
 
 Parágrafo Único. (Vetado)
 
-Art. 6º Os cargos previstos no [Anexo I](/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md#anexo-i) desta Lei, constituem o Quadro Permanente de Pessoal do Poder Executivo Municipal de Maricá e estão assim estruturados:
+Art. 6º Os cargos previstos no [Anexo I](/1993-1996/1996/lei-ordinaria/LEI-01517-1996#anexo-i) desta Lei, constituem o Quadro Permanente de Pessoal do Poder Executivo Municipal de Maricá e estão assim estruturados:
 
 I - Cargos de Provimento Efetivo - Cargos Operacionais.
 
@@ -44,7 +44,7 @@ Art. 8º Os cargos Públicos do Poder Executivo do Município de Maricá, serão
 
 Parágrafo Único. Os Cargos de Provimento em Comissão demissíveis "ad nutum", serão ocupados através de nomeações do Poder Executivo Municipal de Maricá.
 
-Art. 9º O [Anexo II](/1993-1996/1996/lei-ordinaria/LEI-01517-1996.md#anexo-ii) estabelece a hierarquia dos Cargos de provimento Efetivo, do Grupo Cargos Operacionais, compartimentada em Cargos Ocupacionais de Atividades Profissionais, subdivididos em Níveis Operacionais com as respectivas Classes, conforme suas escolaridades com habilitações específicas exigidas e as complexidades de suas atribuições, assim como suas referências, que serão consolidadas pelo Plano de Remunerações.
+Art. 9º O [Anexo II](/1993-1996/1996/lei-ordinaria/LEI-01517-1996#anexo-ii) estabelece a hierarquia dos Cargos de provimento Efetivo, do Grupo Cargos Operacionais, compartimentada em Cargos Ocupacionais de Atividades Profissionais, subdivididos em Níveis Operacionais com as respectivas Classes, conforme suas escolaridades com habilitações específicas exigidas e as complexidades de suas atribuições, assim como suas referências, que serão consolidadas pelo Plano de Remunerações.
 
 § 1º O subgrupo de Atividades Profissionais de Nível Elementar é composto por cargos que exigem de seus ocupantes nível de escolaridade equivalente ao 1º grau completo ou Incompleto, distribuídos hierarquicamente em 03 (três) classes: A, B e C, de acordo com a complexidade de suas atribuições: da habilitação ou da qualificação.
 
