--- a/docs/2025-2028/2025/lei-complementar/LCM-00404-2025.md
+++ b/docs/2025-2028/2025/lei-complementar/LCM-00404-2025.md
@@ -4,7 +4,7 @@ Altera o art. 63 da Lei Complementar nº 001, de 09 de maio de 1990, que dispõe
 
 A Câmara Municipal de Maricá, no uso de suas atribuições legais, aprova e eu, Prefeito Municipal, sanciono a seguinte lei complementar:
 
-**Art. 1º** Altera o caput e os parágrafos 1º e 2º e inclui os parágrafos 3º e 4º ao artigo 63 da [Lei Complementar nº 001, de 09 de maio de 1990](/legislatura-1989-1992/1990/leis-complementares/LC-001-1990.md), que passam a viger com a seguinte forma e redação:
+Art. 1º Altera o caput e os parágrafos 1º e 2º e inclui os parágrafos 3º e 4º ao artigo 63 da [Lei Complementar nº 001, de 09 de maio de 1990](/legislatura-marica-rj/1989-1992/1990/lei-complementar/LCM-00001-1990), que passam a viger com a seguinte forma e redação:
 
 “Art. 63. Os agentes públicos que, a serviço, se afastarem da sede em que têm exercício, em caráter eventual ou transitório, para outro ponto do território nacional ou para o exterior, farão jus a passagens e diárias destinadas a indenizar as parcelas de despesas extraordinárias com hospedagem, alimentação e locomoção urbana, conforme dispuser em regulamento.
 § 1º Nos casos em que o deslocamento da sede constituir exigência permanente do cargo, o servidor não fará jus a diárias.
@@ -12,11 +12,12 @@ A Câmara Municipal de Maricá, no uso de suas atribuições legais, aprova e eu
 § 3º Os afastamentos em território nacional serão autorizados pelos titulares de órgãos ou entidades aos quais o agente público estiver vinculado.
 § 4º Os afastamentos para o exterior deverão ser submetidos à autorização do chefe do poder ao qual o agente público estiver vinculado.”
 
-**Art. 2º** Esta lei complementar entra em vigor na data de sua publicação.
+Art. 2º Esta lei complementar entra em vigor na data de sua publicação.
 
 Gabinete do Prefeito do Município de Maricá, Estado do Rio de Janeiro, 09 de junho de 2025.
 
-**Washington Luiz Cardoso Siqueira**
-**Prefeito do Município de Maricá**
+Washington Luiz Cardoso Siqueira
 
-<span style="color: #FF0000;">Este texto não substitui o publicado no JOM nº 1743 de 11.06.2025.</span>
+Prefeito do Município de Maricá
+
+Este texto não substitui o publicado no JOM nº 1743 de 11.06.2025.
