--- a/docs/1989-1992/1991/lei-complementar/LCM-00005-1991.md
+++ b/docs/1989-1992/1991/lei-complementar/LCM-00005-1991.md
@@ -27,7 +27,7 @@ II - TAXAS:
 
 ~~a)~~
 
-a) Tarifas de Serviços Públicos; [(Incluído pela Lei Complementar nº 15, de 1991)](../1989-1992/1991/lei-complementar/LCM-00015-1991)
+a) Tarifas de Serviços Públicos; [(Incluído pela Lei Complementar nº 15, de 1991)](../LCM-00015-1991) [Teste2](../lei-complementar/LCM-00015-1991.md) [Teste3](/docs/2025-2028/2025/decreto/DEC-00004-2025) [Teste4](../2025-2028/2025/decreto/DEC-00004-2025) [Teste5](../../2025/decreto/DEC-00004-2025) [Teste6](../../../decreto/DEC-00004-2025) [Teste7](../../../../DEC-00004-2025) 
 
 b) Taxas de Licença (TL);
 
